# MCW_CPPAMP_TORCH

./: .hgignore  Contributors  README.md  Storage.c  Storage.cpp  TensorMath.cpp~
gpunn/: .Abs.cpp.swp  .HardTanh.cpp.swp  Abs.cpp  AbsCriterion.cpp  CMakeLists.txt  CONTRIBUTING.md  ClassNLLCriterion.cpp  DistKLDivCriterion.cpp  Exp.cpp  HardTanh.cpp  L1Cost.cpp  LogSoftMax.cpp  MSECriterion.cpp  Max.cpp  Min.cpp  MultiMarginCriterion.cpp  Sigmoid.cpp  SoftMax.cpp  SoftPlus.cpp  SpatialAveragePooling.cpp  SpatialConvolutionCUDA.cpp  SpatialConvolutionGPU.cpp  SpatialConvolutionMM.cpp  SpatialConvolutionMM_BHWD.cpp  SpatialMaxPooling.cpp  SpatialMaxPoolingCUDA.cpp  SpatialMaxPoolingGPU.cpp  SpatialSubSampling.cpp  SpatialUpSamplingNearest.cpp  Sqrt.cpp  Square.cpp  Tanh.cpp  TemporalConvolution.cpp  Threshold.cpp  common.h  init.cpp  init.lua
gpunn/SpatialConvolutionCUDA/: accGradParameters.cpp  updateGradInput.cpp  updateOutput.cpp
gpunn/SpatialConvolutionGPU/: accGradParameters.cpp  updateGradInput.cpp  updateOutput.cpp
gpunn/SpatialPoolingCUDA/: updateGradInput.cpp  updateOutput.cpp
gpunn/SpatialPoolingGPU/: updateGradInput.cpp  updateOutput.cpp
gpunn/cmake/: FindCUDA.cmake
gpunn/cmake/FindCUDA/: make2cmake.cmake  parse_cubin.cmake  run_nvcc.cmake
gpunn/rocks/: cunn-scm-1.rockspec  gpunn-scm-1.rockspec
gpunn/test/: benchmark.lua  fbtest.cpp  test.cpp  test.lua
gputorch/: CMakeLists.txt  CONTRIBUTING.md  FFI.lua  Storage.cpp  Tensor.cpp  Tensor.lua  TensorMath.cpp  TensorMath.lua  init.cpp  init.lua
gputorch/lib/THC/: .THCTensorMath.cpp.swp  CMakeLists.txt  THC.h  THCAMPBlasImpl.cpp  THCAMPBlasImpl.h  THCBlas.cpp  THCBlas.h  THCBolt.cpp  THCBolt.h  THCGeneral.cpp  THCGeneral.h  THCStorage.cpp  THCStorage.h  THCStorageCopy.cpp  THCStorageCopy.h  THCTensor.cpp  THCTensor.h  THCTensorConv.cpp  THCTensorConv.h  THCTensorCopy.cpp  THCTensorCopy.h  THCTensorMath.cpp  THCTensorMath.h  THCTensorRandom.cpp  THCTensorRandom.h  common.h  copyHelpers.cpp  copyHelpers.h  gemm.cpp  gemm.h
gputorch/lib/THC/gpunn-impl/: Abs.cpp  AbsCriterion.cpp  ClassNLLCriterion.cpp  DistKLDivCriterion.cpp  Exp.cpp  HardTanh.cpp  L1Cost.cpp  LogSoftMax.cpp  MSECriterion.cpp  Max.cpp  Min.cpp  MultiMarginCriterion.cpp  Sigmoid.cpp  SoftMax.cpp  SoftPlus.cpp  SpatialAveragePooling.cpp  SpatialConvolutionGPU.cpp  SpatialConvolutionMM.cpp  SpatialConvolutionMM_BHWD.cpp  SpatialMaxPooling.cpp  SpatialMaxPoolingGPU.cpp  SpatialSubSampling.cpp  SpatialUpSamplingNearest.cpp  Sqrt.cpp  Square.cpp  Tanh.cpp  TemporalConvolution.cpp  Threshold.cpp  common.h  init.cpp
gputorch/lib/THC/gpunn-impl/SpatialConvolutionGPU/: accGradParameters.cpp  updateGradInput.cpp  updateOutput.cpp
gputorch/lib/THC/gpunn-impl/SpatialPoolingGPU/: updateGradInput.cpp  updateOutput.cpp
gputorch/rocks/: cutorch-scm-1.rockspec  gputorch-scm-1.rockspec
gputorch/test/: .test.lua.swp  test.cpp  test.lua
gputorch/torch/: utils.c  utils.cpp  utils.h
gputorch/torch/generic/: Storage.c  Tensor.c  TensorOperator.c
mcw_nn/: Abs.lua  ClassNLLCriterion.lua  Criterion.lua  Module.lua  SpatialConvolutionGPU.lua  SpatialMaxPoolingGPU.lua  init.lua
mcw_nn/rocks/: nn-scm-1.rockspec
mcw_torch7_core/generic/: Tensor.c
mcw_torch7_core/lib/TH/generic/: THBlas.h  THTensor.c  THVector.c
