SET(src 
   THCGeneral.cpp gemm.cpp
    THCBlas.cpp THCStorage.cpp THCTensor.cpp THCTensorCopy.cpp THCTensorConv.cpp THCTensorMath.cpp THCTensorRandom.cpp)

# MCW CLAMP Specific. Version >= 0.3 is Must
 # MCW CLAMP Specific. Version >= 0.3 is Must
SET (OPENCL_INC "$ENV{AMDAPPSDKROOT}/include")
SET (OPENCL_LIB "$ENV{AMDAPPSDKROOT}/lib/x86_64")
SET (CLBLAS_INC "$ENV{CLBLASROOT}/include")
SET (CLBLAS_LIB "$ENV{CLBLASROOT}/lib64/")
SET (BOLT_SRC_INC "$ENV{BOLTROOT}/include/")
SET (BOOST_SRC_INC "$ENV{MCWCPPAMPROOT}/master-build/Bolt/superbuild/external/boost/src/Boost/")
SET (BOLT_VER_INC "$ENV{MCWCPPAMPROOT}/master-build/Bolt/superbuild/Bolt-build/include/")
SET (PREFIX "$ENV{MCWCPPAMPROOT}/gmac_exp_build_cache")
SET (CLANG_AMP "${PREFIX}/compiler/bin/clang++")
SET (CLAMP_CONFIG "${PREFIX}/build/Release/bin/clamp-config")
execute_process(COMMAND ${CLAMP_CONFIG} --build --cxxflags
    OUTPUT_VARIABLE CLAMP_CXXFLAGS)
string(STRIP ${CLAMP_CXXFLAGS} CLAMP_CXXFLAGS)
set (CLAMP_CXXFLAGS "${CLAMP_CXXFLAGS} -I${OPENCL_INC}")
execute_process(COMMAND ${CLAMP_CONFIG} --build --ldflags --shared
    OUTPUT_VARIABLE CLAMP_LDFLAGS)
string(STRIP ${CLAMP_LDFLAGS} CLAMP_LDFLAGS)
set (CLAMP_CXXFLAGS "${CLAMP_CXXFLAGS} -I${OPENCL_INC} -I${CLBLAS_INC} -I${BOLT_SRC_INC} -I${BOLT_VER_INC} -I${BOOST_SRC_INC}")
set (CLAMP_LDFLAGS "${CLAMP_LDFLAGS} -L${OPENCL_LIB} -L${CLBLAS_LIB} -lclBLAS")

SET_PROPERTY(SOURCE THCBlas.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE THCStorage.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE THCTensor.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE THCTensorMath.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE THCTensorConv.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE THCTensorCopy.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE THCTensorRandom.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE THCGeneral.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
SET_PROPERTY(SOURCE gemm.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")



#SET(src-gpu THC.cu)

#CUDA_ADD_LIBRARY(THC SHARED ${src} ${src-gpu})
ADD_LIBRARY(THC SHARED ${src})
TARGET_LINK_LIBRARIES(THC TH)

SET_PROPERTY(TARGET THC APPEND_STRING PROPERTY LINK_FLAGS " ${CLAMP_LDFLAGS} ${CLAMP_SHAREDFLAGS}")

INSTALL(TARGETS THC
          RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
          LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
          ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

INSTALL(FILES
          THC.h
          THCGeneral.h
          THCGeneral.h
          THCStorage.h
          THCTensor.h
          THCTensorRandom.h
          THCTensorMath.h
          THCTensorConv.h
          DESTINATION "${Torch_INSTALL_INCLUDE_SUBDIR}/THC")
